# basecamp

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_phase_0_schema.py  0002_phase_1a_auth_product_shell.py  0003_phase_1a5_resync_websocket.py  0004_phase_1b_planning_correctness.py  0005_phase_1b_idempotency_failures.py  0006_phase_1b75_coordination.py  0007_phase_1b75_activity_travel_mode.py  0008_phase_1b75_plan_coordination.py  0009_phase_1b75_history_archival.py  0010_phase_1b75_avatar_emoji.py  0011_phase1c_co_owner_requests.py  0012_phase2_external_caches.py
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/api/: deps.py
apps/api/app/core/: config.py  cors.py  database.py  errors.py  security.py
apps/api/app/db/: base.py
apps/api/app/models/: __init__.py  activity.py  ai.py  cache.py  coordination.py  event.py  expense.py  expense_split.py  idempotency.py  invite.py  itinerary.py  itinerary_item.py  langgraph_run.py  launch.py  ledger.py  ledger_entry.py  metrics.py  plan.py  plan_member.py  user.py  (+1 more)
apps/api/tests/: test_add_activity_to_itinerary.py  test_cors.py  test_phase_1a5.py  test_phase_1b.py  test_phase_1b75.py  test_phase_1b75_activity_controls.py  test_phase_1b75_avatars.py  test_phase_1b75_verification.py  test_phase_1c_activity_vote_projection.py  test_phase_1c_co_owner_request_races.py  test_phase_1c_member_management.py  test_phase_1c_realtime.py  test_phase_2_external.py
(+101 files in other folders)
